# zeo

./: README.md  package-lock.json  package.json
bench/: Cargo.toml
benchmarks/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  config.toml  quick_start.sh  report_template.md  run_benchmarks.sh
benchmarks/scripts/: continuous_monitoring.sh  generate_trend_report.sh  run_mobile_benchmarks.sh
benchmarks/src/: lib.rs  main.rs  monitoring.rs  reporting.rs
benchmarks/tests/: javascript_execution.js
benchmarks/tests/ai/: agent_benchmark.js
benchmarks/tests/io/: file_benchmark.js
benchmarks/tests/modules/: load.js  module1.js  module2.js  module3.js  module4.js  module5.js
benchmarks/tests/network/: http_benchmark.js  test_server.js
docs/: team.md
docs/architecture/: system-architecture.md
docs/design/: design-doc.md
docs/product/: product-planning.pptx
docs/research/: technical-research.md
src/liteclaw/: index.ts  package.json
src/liteclaw/agents/: chat-agent.ts
src/liteclaw/core/: agent.ts  session.ts  types.ts
src/liteclaw/llm/: client.ts
src/liteclaw/tools/: builtin.ts  registry.ts  types.ts
src/liteclaw/zeo/: binding.ts
src/zeo/: Cargo.toml  core.rs  engine.rs  integration.rs  lib.rs  monitor.rs  resource.rs
src/zeo/integration/: nodejs.rs  openclaw.rs
