[package]
name = "zeo-benchmark"
version = "0.1.0"
edition = "2021"
description = "Performance benchmark framework for Zeo runtime"
authors = ["Zeo Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "zeo-benchmark"
path = "src/main.rs"

[lib]
name = "zeo_benchmark"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"