[package]
name = "zeo"
version = "0.1.0"
edition = "2021"
description = "High-performance AI Agent execution engine"
license = "MIT"
authors = ["zeo team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.20"
thiserror = "1.0"
anyhow = "1.0"
quick-js = { version = "0.4", optional = true }
rusty_v8 = { version = "0.100", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["quickjs"]
quickjs = ["quick-js"]
v8 = ["rusty_v8"]
mobile = []

[[bin]]
name = "zeo"
path = "src/main.rs"

[lib]
name = "zeo"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3